crates/tui/tests/storybook/snapshots/app_transcript_view_state::bash_multiline_header_indent.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash set -euo pipefail                                                     14:37:03
       rm -rf /tmp/smelt-fuzzy-check
       mkdir -p /tmp/smelt-fuzzy-check/src
  done










─ ✿ working… ─────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                     1:1 100%
