crates/tui/tests/storybook/snapshots/app_transcript_view_state::bash_multiline_header_indent.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 86 18
  0   0   1 fg=AnsiValue(77)
  0   1   5 attrs=dim
  0   7   3 fg=Rgb { r: 102, g: 217, b: 239 }
  0  10  14 fg=Rgb { r: 255, g: 255, b: 255 }
  1   0   2 attrs=dim
  1   2   2 fg=Rgb { r: 255, g: 255, b: 255 }
  1   4   4 fg=Rgb { r: 253, g: 151, b: 31 }
  1   8  23 fg=Rgb { r: 255, g: 255, b: 255 }
  2   0   2 attrs=dim
  2   2   5 fg=Rgb { r: 255, g: 255, b: 255 }
  2   7   3 fg=Rgb { r: 253, g: 151, b: 31 }
  2  10  27 fg=Rgb { r: 255, g: 255, b: 255 }
  3   2   4 attrs=dim
 14   0   1 fg=AnsiValue(237)
 14   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 14   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 14  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 14  13  73 fg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 16   0  86 fg=AnsiValue(237)
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  68 bg=AnsiValue(233)
 17  78   8 fg=AnsiValue(244) bg=AnsiValue(233)
