crates/tui/tests/storybook/snapshots/app_transcript_view_state::compacted_block_collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
──────────────────────── compacted ────────────────────────



  tip ctrl+enter / ctrl+q, steer the current response wit…
────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
