crates/tui/tests/storybook/snapshots/app_transcript_view_state::compacted_block_expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
──────────────────────── compacted ────────────────────────
Compacted 8 earlier turns: parser refactor, renderer
wiring, three bug fixes.

  tip ctrl+enter / ctrl+q, steer the current response wit…
────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
