crates/tui/tests/storybook/snapshots/app_transcript_view_state::compacted_block_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 472
expression: frame.text()
---
──────────────────────── compacted ────────────────────────
Compacted 8 earlier turns: parser refactor, renderer
wiring, three bug fixes.

  tip ctrl+enter / ctrl+q, steer the current response wit…
────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
